--- a/package.json
+++ b/package.json
@@ -3,13 +3,52 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Marc Reyes <hi@marcr.xyz>",
+  "description": "A modern passkeys authentication demo using WebAuthn API built with Vite and TypeScript",
+  "keywords": [
+    "passkeys",
+    "webauthn",
+    "authentication",
+    "biometric",
+    "passwordless",
+    "vite",
+    "typescript"
+  ],
+  "homepage": "https://passkeys.marcr.xyz",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "npm run type-check && vite build",
+    "build:clean": "rm -rf dist && npm run build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky install",
+    "check-all": "npm run type-check && npm run lint && npm run format:check"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.45.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.0",
+    "prettier": "^3.0.0",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{js,jsx,json,css,md}": [
+      "prettier --write"
+    ]
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
