--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "vite",
     "build": "npm run type-check && vite build",
     "build:clean": "rm -rf dist && npm run build",
+    "start": "npx serve -s dist -p $PORT",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
@@ -27,6 +28,9 @@
     "type-check": "tsc --noEmit",
     "prepare": "husky install",
     "check-all": "npm run type-check && npm run lint && npm run format:check"
+  },
+  "dependencies": {
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
