--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
+    "type-check:staged": "tsc --noEmit",
     "prepare": "husky install",
-    "check-all": "npm run type-check && npm run lint && npm run format:check"
+    "check-all": "npm run type-check && npm run lint && npm run format:check",
+    "check-staged": "npm run type-check:staged && npx lint-staged"
   },
   "dependencies": {
     "serve": "^14.2.0"
