--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "dependencies": {
     "serve": "^14.2.0",
-    "@material/web": "^1.5.0"
+    "@material/web": "^1.5.0",
+    "@simplewebauthn/browser": "^10.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
