--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,11 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "@simplewebauthn/server": "^10.0.0",
-    "base64url": "^3.0.1"
+    "base64url": "^3.0.1",
+    "redis": "^4.6.8",
+    "express-session": "^1.17.3",
+    "connect-redis": "^7.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -27,7 +31,9 @@
     "webauthn",
     "express",
     "postgresql",
-    "authentication"
+    "authentication",
+    "redis",
+    "sessions"
   ],
   "author": "Marc Reyes",
   "license": "MIT"
