--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,20 @@ services:
       timeout: 10s
       retries: 3
 
+  redis:
+    image: redis:7-alpine
+    container_name: passkeys-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   backend:
     build:
       context: .
@@ -26,12 +40,17 @@ services:
     environment:
       NODE_ENV: development
       DATABASE_URL: postgresql://passkeys_user:passkeys_password@postgres:5432/passkeys_db
+      REDIS_URL: redis://redis:6379
       PORT: 3000
       CORS_ORIGIN: http://localhost:5173
+      SESSION_SECRET: your-super-secret-session-key-change-in-production
+      SESSION_MAX_AGE: 604800000
     ports:
       - "3000:3000"
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     volumes:
       - ./backend:/app
@@ -63,4 +82,6 @@ services:
 
 volumes:
   postgres_data:
+    driver: local
+  redis_data:
     driver: local 
